--- a/client/src/assets/base.css
+++ b/client/src/assets/base.css
@@ -58,7 +58,7 @@
   padding: 0;
   font-weight: normal;
 }
-
+/* 
 body {
   min-height: 100vh;
   color: var(--color-text);
@@ -72,4 +72,4 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+} */
